# Dorm-Room-Temperature-Monitoring

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  database.c  database_create.c  database_create.h  database_insert.c  database_insert.h  databaseinserttest.c  databaseinsettest.h  main.c  sensor.c  sensor.db  sensor.h  server.c  server_callback.c
src/Database/: database_create.c  databaseinserttest.c
src/Sensor/: sensor.c
src/Server/: Makefile  api_handler.c  api_handler.h  db_handle.c  db_handle.h  http_server.c  http_server.h  main.c  sensor_data.db  sensor_feeder  sensor_feeder.c  server  server.c  server_callback.h  static_handler.c  static_handler.h  tcp_server.c  tcp_server.h  utils.c  utils.h
src/Server/www/: index.html
src/Server/www/assets/: index-6w9-vnTv.js  index-BHNNZ3ts.js  index-BWGOX0Fv.js  index-BzX70BgF.js  index-CFWiFmSW.js  index-CPtwP_Uc.css  index-CTSRkXYy.js  index-Cdlu2-rM.js  index-DNgAfLpB.js  index-LCPy1XXv.css  index-lJBHSZUc.js  index-yIpfg9Ed.css
test/: CMakeLists.txt  init_test_db.c  test_api_handler.c  test_database_insert.c  test_db_handler.c  test_sensor.c  test_utils.c
